--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </section>
             <section id="resume">
                 <h2>Resume</h2>
-                <a href="./resources/Jason Richmond Resume.pdf" download="Jason Richmond Resume.pdf" target="_blank">This is a link to download the latest version of my resume.</a>
+                <a class="resume" href="./resources/Jason Richmond Resume.pdf" download="Jason Richmond Resume.pdf" target="_blank">This is a link to download the latest version of my resume.</a>
             </section>
         </main>
         <footer> Created by Jason Richmond.</footer>
