added resume class to contact links

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
             <section id="contact">
                 <h2>Contact</h2>
                 <p>Wish to get in contact with me? Please use one of the options below.</p>
-                <div>
+                <div class="resume">
                     <a href="https://www.linkedin.com/in/jason-richmond-729a58190?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bhu6DOJcWSHWvK0%2BlzqFP9A%3D%3D" target="_blank">
-                        <p>LinkedIn</p>
+                        <p>LinkedIn Profile</p>
                     </a>
                     <a href="mailto:jrichmond110@outlook.com">
                         <p>Email: jrichmond110@outlook.com</p>
