--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
             <section id="contact">
                 <h2>Contact</h2>
                 <p>Wish to get in contact with me? Please use one of the options below.</p>
-                <div class="resume">
-                    <a href="https://www.linkedin.com/in/jason-richmond-729a58190?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bhu6DOJcWSHWvK0%2BlzqFP9A%3D%3D" target="_blank">
+                <div>
+                    <a class="resume" href="https://www.linkedin.com/in/jason-richmond-729a58190?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bhu6DOJcWSHWvK0%2BlzqFP9A%3D%3D" target="_blank">
                         <p>LinkedIn Profile</p>
                     </a>
-                    <a href="mailto:jrichmond110@outlook.com">
+                    <a class="resume" href="mailto:jrichmond110@outlook.com">
                         <p>Email: jrichmond110@outlook.com</p>
                     </a>
                 </div>
