--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Jason Richmond Contact Info</title>
+        <title>Jason Richmond Portfolio</title>
         <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
@@ -20,19 +20,11 @@
             </nav>
         </header>
         <main>
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>Wish to get in contact with me? Please use one of the options below.</p>
-                <div>
-                    <a class="resume" href="https://www.linkedin.com/in/jason-richmond-729a58190?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bhu6DOJcWSHWvK0%2BlzqFP9A%3D%3D" target="_blank">
-                        <p>LinkedIn Profile</p>
-                    </a>
-                    <a class="resume" href="mailto:jrichmond110@outlook.com">
-                        <p>Email: jrichmond110@outlook.com</p>
-                    </a>
-                </div>
+            <section id="games-intro">
+                <p>This is a directory of all the text adventure games I am working on. Feel free to click any of the below links and play them.</p>
             </section>
         </main>
         <footer> Created by Jason Richmond.</footer>
     </body>
+    <script src="./resources/mixedMessages.js"></script>
 </html>
