--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <li class="nav-item"><a href="index.html#about">About Me</a></li>
                     <li class="nav-item"><a href="index.html#projects">Projects</a></li>
                     <li class="nav-item"><a href="index.html#resume">Resume</a></li>
+                    <li class="nav-item"><a href="./games.html">Games</a></li>
                     <li class="nav-item"><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
