added popup div and changed link color

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
                     </a>
                 </div>
             </section>
+            <div id="storage"></div>
         </main>
         <footer> Created by Jason Richmond.</footer>
     </body>
