--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <h2>Resume</h2>
                 <a class="resume" href="./resources/Jason Richmond Resume.pdf" download="Jason Richmond Resume.pdf" target="_blank">This is a link to download the latest version of my resume.</a>
             </section>
+            <div id="storage"></div>
         </main>
         <footer> Created by Jason Richmond.</footer>
     </body>
