--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Jason Richmond Portfolio</title>
-        <link rel="stylesheet" href="./index.css" />
+        <link rel="stylesheet" href="./dark.css" />
     </head>
     <body id="body">
         <header>
