--- a/index.html
+++ b/index.html
@@ -79,4 +79,5 @@
         <footer> Created by Jason Richmond.</footer>
     </body>
     <script src="./resources/mixedMessages.js"></script>
+    <script src="./resources/storage.js"></script>
 </html>
