--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </section>
             <div id="storage" style="display: none;">
                 <p class="popup">Please enable cookies to switch between Dark & Light modes</p>
-                <p id="popupButton" class="popupButton">X</p>
+                <input id="popupButton" type="button" class="popupButton" value="X" />
             </div>
         </main>
         <footer> Created by Jason Richmond.</footer>
