--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2>Resume</h2>
                 <a class="resume" href="./resources/Jason Richmond Resume.pdf" download="Jason Richmond Resume.pdf" target="_blank">This is a link to download the latest version of my resume.</a>
             </section>
-            <div id="storage" style="display: none;">
+            <div id="storage">
                 <p class="popup">Please enable cookies to switch between Dark & Light modes</p>
                 <input id="popupButton" type="button" class="popupButton" value="X" />
             </div>
