--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a class="resume" href="./resources/Jason Richmond Resume.pdf" download="Jason Richmond Resume.pdf" target="_blank">This is a link to download the latest version of my resume.</a>
             </section>
             <div id="storage">
-                <p class="popup">Please enable cookies to switch between Dark & Light modes</p>
+                <p class="popup">Please enable cookies to switch between Dark & Light modes (not currently implemented)</p>
                 <input id="popupButton" type="button" class="popupButton" value="X" />
             </div>
         </main>
