Added storage text

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <h2>Resume</h2>
                 <a class="resume" href="./resources/Jason Richmond Resume.pdf" download="Jason Richmond Resume.pdf" target="_blank">This is a link to download the latest version of my resume.</a>
             </section>
+            <section>
+                <p id="storage_status"></p>
+            </section>
             <div id="storage">
                 <p class="popup">Please enable cookies to switch between Dark & Light modes (not currently implemented)</p>
                 <input id="popupButton" type="button" class="popupButton" value="X" />
